--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.1",
+    "@reduxjs/toolkit": "^1.8.2",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "eslint": "8.12.0",
