--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fullcalendar/timegrid": "6.1.6",
     "@hookform/resolvers": "3.1.0",
     "@iconify/react": "4.1.0",
+    "@mui/icons-material": "^5.15.16",
     "@mui/lab": "5.0.0-alpha.128",
     "@mui/material": "5.12.2",
     "@mui/system": "5.12.1",
@@ -51,6 +52,7 @@
     "i18next-browser-languagedetector": "7.0.1",
     "i18next-http-backend": "2.2.0",
     "jsonwebtoken": "8.5.1",
+    "jsts": "^2.11.2",
     "keen-slider": "6.8.5",
     "next": "13.3.2",
     "nprogress": "0.2.0",
