--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "jsonwebtoken": "8.5.1",
     "jsts": "^2.11.2",
     "keen-slider": "6.8.5",
+    "mui-image": "^1.0.7",
     "next": "13.3.2",
     "nprogress": "0.2.0",
     "payment": "2.4.6",
