--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-redux": "8.0.5",
     "recharts": "2.5.0",
     "sequelize": "^6.37.3",
+    "sequelize-cli": "^6.6.2",
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "2.1.1",
     "yup": "1.1.1"
