Fixed/renamed .sequelizerc.js to .sequelizerc; Switched test database to use_env_variable, for consistency; Got the sequelize-cli output files to work with my models/index.js approach, so switched to those generated files; Added explicit keys to models container object in models/index.js; Re-enabled auto-wiring of models through associate() helper; Added ContourType migration and seeder

--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,6 +1,7 @@
-import path from 'path'
+require( 'dotenv' ).config()
+const path = require( 'path' )
 
-export default
+module.exports =
 {
 	config: path.resolve( 'db', 'config.js' ),
 	'models-path': path.resolve( 'db', 'models' ),
