--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "clipboard-copy": "4.0.1",
     "clsx": "1.2.1",
     "date-fns": "2.30.0",
+    "dotenv": "^16.4.5",
     "draft-js": "0.11.7",
     "i18next": "22.4.15",
     "i18next-browser-languagedetector": "7.0.1",
