--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jsts": "^2.11.2",
     "keen-slider": "6.8.5",
     "mui-image": "^1.0.7",
+    "mui-nested-menu": "^3.4.0",
     "mysql2": "^3.9.7",
     "next": "13.3.2",
     "nprogress": "0.2.0",
