Extended/optimized camera snapshot to include dimensions; Added <g> container to apply transform, since it's not officially supported on <svg>

--- a/package.json
+++ b/package.json
@@ -58,16 +58,16 @@
     "mui-image": "^1.0.7",
     "mui-nested-menu": "^3.4.0",
     "mysql2": "^3.9.7",
-    "next": "13.3.2",
+    "next": "^14.2.11",
     "nprogress": "0.2.0",
     "payment": "2.4.6",
     "prismjs": "1.29.0",
-    "react": "18.2.0",
+    "react": "^18.3.1",
     "react-apexcharts": "1.4.0",
     "react-chartjs-2": "5.2.0",
     "react-credit-cards": "0.8.3",
     "react-datepicker": "4.11.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "1.15.0",
     "react-dropzone": "14.2.3",
     "react-hook-form": "7.43.9",
